Version 9      ???

--Fixed client bug in coin distribution after a tie.

--Fixed confusing behavior when opponent bets less than us and then folds (our
  larger bet is now shown moving into the pot before the payout---before, our
  larger bet was not shown moving into the pot).

--Fixed bugs in possible score graph update when sliders are dragged over
  blocked columns or when one slider pushes another out of the way.

--Fixed bug when opponent leaves game right before start of next round (board
  would fade back in and redraw all color strokes from the last round).

--Fixed post-game report to show pre-buy-in balance and buy-in.

--Typed credit card info is now replaced with 0 characters in recordedGame
  file.

--Fixed bugs in game button placement on game list page.

--Added support for setting min and max allowed game stakes on server and
  through protocol in client.  This could be useful for tournaments and other
  contests.

--Rewrote the possible score calculation in a way that avoids redundant work by
  calculating scores for each player separately instead of exploring the full
  game tree.  This results in a 25x speedup for the calculation when placing
  the first slider (visiting 24,000 leaves instead of 604,800 leaves), meaning
  that the calculation can now be done in realtime while smooth dragging 
  (thanks Ralph V).

--List of three closest-valued other games now shown on the Waiting For
  Opponent screen.





Version 8      Live Server Fixes

--Added a tribute cap, initially at 4 coins.

--Adjusted tribute percentage to 17, and lowered cap to 1.  Thus, at most one
  coin is taken as tribute, but it is taken from all pots that are 6 or larger.

--Fixed so that stale games are ended before fetching balance on menu screen
  (for example, after force-quit or crash during a game).






Version 8      2014-November-20

First private alpha release.