@@ -6,7 +6,7 @@
 
 
 #include "TextButton.h"
-#include "TextField.h"
+#include "NumberPicker.h"
 
 
 
@@ -24,11 +24,7 @@ class InPersonPage : public ServerActionPage, public ActionListener {
 
         virtual void makeActive( char inFresh );
         
-        virtual void makeNotActive();
-        
 
-        // for TAB and ENTER (switch fields and start server action)
-        virtual void keyDown( unsigned char inASCII );
         
         
         virtual void draw( doublePair inViewCenter, 
@@ -41,15 +37,13 @@ class InPersonPage : public ServerActionPage, public ActionListener {
         
     protected:
         
-        TextField mCodeField;
+        NumberPicker mCodePicker;
         
 
         TextButton mStartButton;
 
         
         
-
-        void makeFieldsActive();
 
         void checkIfStartButtonVisible();
                 
